src/objects/zqu__StepToFlowMap__c.object
<CustomObject>
    <description>Mapping of a Guided Selling Step to a Guided Selling Flow.</description>
    <fields>
        <fullName>zqu__GuidedSellingFlow__c</fullName>
        <description>The Guided Selling Flow being mapped to.</description>
        <inlineHelpText>The Guided Selling Flow being mapped to.</inlineHelpText>
        <label>Guided Selling Flow</label>
        <referenceTo>zqu__GuidedSellingFlow__c</referenceTo>
        <relationshipLabel>Step To Flow Maps</relationshipLabel>
        <relationshipName>StepToFlowMaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__GuidedSellingStep__c</fullName>
        <description>The Guided Selling Step being mapped to.</description>
        <inlineHelpText>The Guided Selling Step being mapped to.</inlineHelpText>
        <label>Guided Selling Step</label>
        <referenceTo>zqu__GuidedSellingStep__c</referenceTo>
        <relationshipLabel>Step To Flow Maps</relationshipLabel>
        <relationshipName>StepToFlowMaps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__Order__c</fullName>
        <description>The order of the Guided Selling Step in the Guided Selling Flow.</description>
        <inlineHelpText>The order of the Guided Selling Step in the Guided Selling Flow.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Step To Flow Map</label>
    <nameField>
        <label>Step To Flow Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Step To Flow Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>